# Smart_Glass

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  Raspberry_Pi_Main.py  app.py  blink_best.pth  blink_data_20250601_085957.csv  blink_data_20250601_090017.csv  blink_lstm_model.pth  blink_lstm_model.py  blink_model.pth  blink_stats.npz  bluetooth_test.py  cmake_install.cmake  constants.py  data_factory.py  data_to_blink.py  data_training.ipynb  main.cpp  main.py  model.py  new_model_test.ipynb  on_device_full.py  pytorch_testing.ipynb  record_96.py  train_blink.py  train_blink_large.py  video_blink_test.py
ESP32_Hotspot/: ESP32_Hotspot.ino  ci.json
Macros/: Starter.py  basic_macro.py  deparse.py  parser.py  runner.py
Model/: data_preparation.py  model.py  train_blink.py  train_eye.py  training_eye_w_super.py
RaspberryPi/: Raspberry_Pi_Main.py  bt_pair_auto.py  smart_bt.py  some.py
data/: blink_data_20250528_174203.csv  blink_data_20250604_190538.csv  blink_data_20250615_174606.csv  blink_data_20250616_092254.csv  blink_data_20250616_104820.csv  compiler_to_eye_data.py  data_factory.py  data_factory_from_vid.py  data_factory_v2.py
dev/: __file__.py  blink_best.pth  blink_data_20250527_083142.csv  blink_data_20250527_092805.csv  blink_data_20250527_092912.csv  blink_detector_best.pth  blink_lstm_model.pth  blink_stats.npz  blinkdata.csv  model.ipynb  new_model_test.ipynb  pytorch_testing.ipynb
dev/models/: blink_img_best.pth
dev/stats/: blink_img_stats.npz
models/: blink_lstm_model.pth
notebooks/: new_model_test.ipynb
